# JPP

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  run_docker.sh
lista0/java/: Main.java
lista1/c/: Makefile  lib.h  lib_iter.c  lib_recur.c
lista1/rust/iterative/: Cargo.toml
lista1/rust/iterative/src/: lib.rs
lista1/zad1-c/: Makefile  lib.h  lib_iter.c  lib_recur.c
lista1/zad2-ada/: Makefile  iterative.adb  iterative.ads  main.adb  recursive.adb  recursive.ads
lista1/zad3-rust/: Makefile
lista1/zad3-rust/iterative/: Cargo.toml
lista1/zad3-rust/recursive/: Cargo.toml
lista1/zad4-ada-c/: Makefile  test.c  wrapper.h
lista1/zad5-c-ada/: AdaWrapper.gpr  Makefile  car.sh
lista1/zad5-c-ada/src/: lib_iter.c  lib_iter.h  lib_recur.c  lib_recur.h  test_iter.adb  test_recur.adb
lista1/zad6-c-rust/: Cargo.toml  build.rs
lista1/zad6-c-rust/src/: main.rs
lista1/zad7-rust-c/: Makefile  main.c
lista2/zad1-cpp/: Makefile  consts.hpp  gf.cpp  gf.hpp  main.cpp
lista2/zad2-java/: Main.java
lista2/zad2_java/: GF.java  Main.java
lista2/zad3-rust/: Cargo.toml
lista2/zad3-rust/src/: main.rs
lista2/zad3-rust2/: Cargo.toml
lista2/zad3-rust2/src/: main.rs
lista3/zad1-cpp/: CMakeLists.txt  DHSetup.cpp  DHSetup.hpp  User.cpp  User.hpp  main.cpp  utils.hpp
lista3/zad2_java/: Arithmetics.java  DHSetup.java  GF.java  Main.java  User.java
lista3/zad3-rust3/: Cargo.toml
lista3/zad3-rust3/src/: main.rs
lista4/zad1-ada/: Makefile  main.adb
lista4/zad2-go/: filozof.go  main.go
lista4/zad3-rust/: Cargo.toml
lista4/zad3-rust/src/: main.rs
(+12 files in other folders)
